fixed phone not fitting the register form

--- a/clientapp/src/app/components/register/register.component.css
+++ b/clientapp/src/app/components/register/register.component.css
@@ -33,6 +33,7 @@ h1 {
 @media only screen and (max-width: 768px) {
     form {
         gap: 0;
+        min-height: 125vh;
     }
 
     .fields {
